--- a/Home/templates/home/H_page.html
+++ b/Home/templates/home/H_page.html
@@ -12,8 +12,10 @@
             <div class="swiper-wrapper">
                 {% for item in slider %}
                     <div class="swiper-slide">
-                        <img src="{{ item.image.url }}" alt="{{ item.title }}"
-                             class="rounded-xl w-full h-full object-cover">
+                        <a>
+                            <img src="{{ item.image.url }}" alt="{{ item.title }}"
+                                 class="rounded-xl w-full h-full object-cover">
+                        </a>
                     </div>
                 {% endfor %}
             </div>
@@ -38,7 +40,7 @@
         </div>
     </div>
 
-
+    <!-- HelpText -->
     <section class="container my-6">
         <div class="text-center mb-4">
             <h2 class="text-sm lg:text-sm font-MorabbaMedium text-zinc-800 dark:text-white flex items-center justify-center gap-x-2">
@@ -72,8 +74,6 @@
     </section>
 
 
-
-
     <!-- category -->
     <section class="container mt-10">
         <!-- TITLE -->
@@ -91,7 +91,7 @@
 
         <!-- ITEMS -->
         <div class="flex items-center justify-evenly lg:justify-between flex-wrap mt-10 gap-x-8 gap-y-6">
-            {% for item in cat %}
+            {% for item in category %}
                 <a href="{% url 'products:category_products' slug=item.slug %}"
                    class="flex flex-col items-center hover:-translate-y-3 transition duration-300">
                     <img src="{{ item.image.url }}"
@@ -247,6 +247,66 @@
             </div>
         </div>
     </section>
+
+    <!-- Show All Categories -->
+    {% for category in category %}
+        <section class="container">
+            <!-- TITLE -->
+            <div class="flex items-center justify-between mb-12">
+                <div class="flex flex-col gap-y-2">
+                    <h2 class="font-MorabbaMedium text-xl lg:text-3xl">
+                        {{ category.name }}
+                    </h2>
+                </div>
+            </div>
+
+            <!-- SLIDER -->
+            <div class="swiper BestSelling rounded-lg" dir="rtl">
+                <div class="swiper-wrapper rounded-lg mb-2 child:cursor-pointer child:overflow-hidden child:rounded-lg child:bg-white child:dark:bg-zinc-700 child:shadow child:w-64 child:relative">
+
+                    {% for product in category.products.all %}
+                        <!-- PRODUCT ITEM -->
+                        <div class="swiper-slide w-64 bg-white rounded-lg shadow p-4">
+                            <!-- OFF BADGE -->
+                            {% if product.discount_percent %}
+                                <span class="absolute top-5 right-5 flex items-center justify-center w-8 h-8 text-xs bg-green-500 rounded-full text-white z-30">
+                            {{ product.discount_percent }}%
+                        </span>
+                            {% endif %}
+
+                            <!-- PRODUCT IMAGE -->
+                            <a href="{% url 'products:detail_products' slug=product.slug %}">
+                                <img src="{{ product.image.url }}" alt="{{ product.name }}"
+                                     class="group-hover:scale-105 duration-300 w-32 h-32 lg:w-48 lg:h-48 mx-auto mb-3"/>
+                            </a>
+
+                            <!-- PRODUCT MAIN -->
+                            <div class="px-2 lg:px-4 mb-3">
+                                <a href="{% url 'products:detail_products' slug=product.slug %}"
+                                   class="line-clamp-1 font-DanaMedium mb-2 text-sm lg:text-base">
+                                    {{ product.name }}
+                                </a>
+                                <div class="flex items-center gap-x-1 lg:gap-x-3">
+                                    <p class="font-DanaDemiBold text-green-600 dark:text-green-500">
+                                        {{ product.get_discount_price|floatformat:0 | intcomma:False }}
+                                        <span class="font-Dana text-sm">تومان</span>
+                                    </p>
+                                    {% if product.discount_percent > 0 %}
+                                        <del class="font-Dana text-xs lg:text-sm text-rose-300 hidden lg:inline">
+                                            {{ product.price|floatformat:0 | intcomma:False }}
+                                            <span>تومان</span>
+                                        </del>
+                                    {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+                </div>
+            </div>
+        </section>
+    {% endfor %}
+
 
 
 
